--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "start": "nodemon nodemon -L src/bin/www",
     "test": "jest"
   },
+  "engines": {
+    "node": "8.9.4"
+  },
   "dependencies": {
     "bcrypt": "^3.0.0",
     "dotenv": "^6.0.0",
